added baby image

--- a/start.html
+++ b/start.html
@@ -9,5 +9,6 @@
 <body>
     <h1>My start file is not my index.html file</h1>
     <h2>new destination</h2>
+    <img src="images.jpg" alt="">
 </body>
 </html>
