--- a/start.html
+++ b/start.html
@@ -9,7 +9,7 @@
 <body>
     <h1>My start file is not my index.html file</h1>
     <h2>new destination</h2>
-    <h5>Look mama, i can write a blog</h5>
+    <h5>Look mama, i can write a blog.its not your mama,its your amma</h5>
     <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus unde, impedit placeat ipsa autem eligendi facere ad quibusdam in amet perferendis fugit tempora cumque voluptate, consectetur aliquam. Voluptates explicabo quis, delectus incidunt unde, blanditiis itaque veritatis quidem illo beatae praesentium!</p>
     </div>
